log

Tue 15 Aug 2023 09:13:19 PM UTC: 
 tests:  0|7
total_score: 0/70
d16b1e3
Tue 15 Aug 2023 09:14:02 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
a5f6276
Tue 15 Aug 2023 09:20:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
fbbf7ff
Tue 15 Aug 2023 09:23:17 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
a575edd
Tue 15 Aug 2023 09:23:30 PM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|6
total_score: 10/70
297a217
Tue 15 Aug 2023 09:37:18 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
f477b87
Tue 15 Aug 2023 10:04:29 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:56:10: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   56 |   return *newSize;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
16d84c6
